current people sync service